--- a/Restaurante/Polls/templates/Polls/Registrar.html
+++ b/Restaurante/Polls/templates/Polls/Registrar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -122,6 +123,11 @@
                   </form>
                   <br>
                   <a href="{% url 'InicioSeccion' %}"><button class="formulario__btn">Iniciar Seccion</button></a>
+                  {% if user.is_authenticated %}
+                  <p>Welcome, You are logged in as {{ user.username }}</p>
+                    {% else %}
+                  <button class="google"><a href="{% provider_login_url 'google' %}">Iniciar seccion con  <img src="{% static 'polls/img/icons8-logo-de-google-48.png' %}" alt=""></a></button>
+                    {% endif %}
                 </div>    
                 </main>	
             <script src="js/formulario.js"></script>
